--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@types/spotify-web-playback-sdk": "^0.1.19",
+    "framer-motion": "^11.0.25",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.12.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
