--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/spotify-web-playback-sdk": "^0.1.19",
     "framer-motion": "^11.0.25",
     "next": "14.1.2",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
