--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@motionone/utils": "^10.17.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@types/spotify-web-playback-sdk": "^0.1.19",
-    "framer-motion": "^11.0.25",
+    "framer-motion": "^11.0.28",
     "next": "14.1.2",
     "next-auth": "^4.24.7",
     "react": "^18",
